--- a/atalet/atalet.csproj
+++ b/atalet/atalet.csproj
@@ -47,16 +47,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="SAP2000v19">
-      <HintPath>..\..\..\..\..\..\..\Program Files\Computers and Structures\SAP2000 19\SAP2000v19.dll</HintPath>
+    <Reference Include="lib.fizibil.moi">
+      <HintPath>..\lib.fizibil.moi\bin\Debug\lib.fizibil.moi.dll</HintPath>
     </Reference>
-    <Reference Include="SapDesign">
-      <HintPath>..\..\..\..\..\..\..\Program Files\Computers and Structures\SAP2000 19\SapDesign.dll</HintPath>
-    </Reference>
-    <Reference Include="SAPGraph">
-      <HintPath>..\..\..\..\..\..\..\Program Files\Computers and Structures\SAP2000 19\SAPGraph.dll</HintPath>
-    </Reference>
-    <Reference Include="SharpDX, Version=2.6.3.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -69,15 +62,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AtaletMoment.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Nokta3D.cs" />
-    <Compile Include="Nokta2D.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
